--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="images/image-victor.jpg" alt="Profile picture">
           </div>
 
-          <h2> Victor Crest <span>26</span></h2>
+          <h2> Victor Crest</h2>
           <p>London</p>
         </section>
 
@@ -59,7 +59,7 @@
 
   <footer class="container">
     <p class="attribution">
-      Coded by <a href="https://github.com/juanptsanchez" target="_blank">Juan Pablo Torres Sánchez - GitHub</a>
+      Coded by <a href="https://github.com/juanptsanchez" target="_blank">Juan Pablo Torres Sánchez - GitHub<i class="fab fa-github"></i></a>
     </p>
   </footer>
 </body>
